--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -33,6 +33,11 @@ html, body{height:100%; margin:0;padding:0}
       <div class="d-flex align-middle min-vh-100 justify-content-center container-full">
           <%= yield %>
       </div>
+      <a href="https://jigsaw.w3.org/css-validator/check/referer">
+          <img style="border:0;width:88px;height:31px"
+               src="https://jigsaw.w3.org/css-validator/images/vcss"
+               alt="Valid CSS!" />
+      </a>
       <script src="//cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
